--- a/features.html
+++ b/features.html
@@ -1,57 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./style.css">
-    <title>Css Rookie</title>
-    </head>
-    <body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./style.css" />
+  <title>Css Rookie</title>
+</head>
+
+<body>
   <!--NavBar-->
   <div class="navBar">
     <div class="container flex">
-        <h1>Loruki.</h1>
-        <nav>
-            <ul>
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="Features.html">Features</a></li>
-                <li><a href="Docs.html">Docs</a></li>
-            </ul>
-        </nav>
+      <h1>Loruki.</h1>
+      <nav>
+        <ul>
+          <li><a href="Index.html">Home</a></li>
+          <li><a href="Features.html">Features</a></li>
+          <li><a href="Docs.html">Docs</a></li>
+        </ul>
+      </nav>
     </div>
   </div>
-<!--Head-->
-<section class="features-head bg-primary py-3">
+  <!--Head-->
+  <section class="features-head bg-primary py-3">
     <div class="container grid">
-        <div>
-            <h1 class="xl">Features</h1>
-            <p class="Lead">
-                Sta god treba da se uradi kako god sunce ti jebem.
-            </p>
-        </div>
-        <img src="./images/server.png">
+      <div>
+        <h1 class="xl">Features</h1>
+        <p class="Lead">Sta god treba da se uradi kako god sunce ti jebem.</p>
+      </div>
+      <img src="./images/server.png" />
     </div>
-</section>
-<!--Sub Head-->
-<section class="features-sub-head bg-light py-3">
+  </section>
+  <!--Sub Head-->
+  <section class="features-sub-head bg-light py-3">
     <div class="container-grid">
-        <div>
-            <h1 class="md">Loruki Platform</h1>
-            <p class="Lead">
-                Sta god treba da se uradi kako god sunce ti jebem.
-            </p>
-        </div>
-        <img src="./images/server2.png">
+      <div>
+        <h1 class="md">Loruki Platform</h1>
+        <p class="Lead">Sta god treba da se uradi kako god sunce ti jebem.</p>
+      </div>
+      <img src="./images/server2.png" />
     </div>
-</section>
+  </section>
   <!--Footer-->
   <footer class="footer bg-dark py-5">
     <div class="container grid grid-3">
       <div>
-        <h1>Loruki.
-        </h1>
+        <h1>Loruki.</h1>
         <p>Copyrith &copy; 2023.</p>
       </div>
       <nav>
@@ -68,5 +67,6 @@
       </div>
     </div>
   </footer>
-    </body>
+</body>
+
 </html>
