--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./style.css">
-    <title>Css Rookie</title>
-    </head>
-    <body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./style.css">
+  <title>Css Rookie</title>
+</head>
+
+<body>
   <!--NavBar-->
   <div class="navBar">
     <div class="container flex">
-        <h1>Loruki.</h1>
-        <nav>
-            <ul>
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="Features.html">Features</a></li>
-                <li><a href="Docs.html">Docs</a></li>
-            </ul>
-        </nav>
+      <h1>Loruki.</h1>
+      <nav>
+        <ul>
+          <li><a href="Index.html">Home</a></li>
+          <li><a href="Features.html">Features</a></li>
+          <li><a href="Docs.html">Docs</a></li>
+        </ul>
+      </nav>
     </div>
   </div>
 
@@ -31,7 +35,7 @@
         <p>Deploy web apps of all kinds, from
           large scale enterprise APIs to static
           website for individuals.</p>
-          <a href="features.html" class="btn-outline">Read More</a>
+        <a href="features.html" class="btn-outline">Read More</a>
       </div>
       <div class="showcase-form card">
         <h2>Request Demo</h2>
@@ -61,19 +65,19 @@
 
       <div class="grid grid-3 text-center my-4">
         <div>
-        <i class="fas fa-server fa-3x"></i>
-        <h3>10.355.405</h3>
-        <p class="text-secondary">Deployments</p>       
+          <i class="fas fa-server fa-3x"></i>
+          <h3>10.355.405</h3>
+          <p class="text-secondary">Deployments</p>
         </div>
         <div>
           <i class="fas fa-upload fa-3x"></i>
           <h3>978 TB</h3>
-          <p class="text-secondary">Published</p>     
+          <p class="text-secondary">Published</p>
         </div>
         <div>
           <i class="fas fa-project-diagram fa-3x"></i>
           <h3>2.333.000</h3>
-          <p class="text-secondary">Projects</p>     
+          <p class="text-secondary">Projects</p>
         </div>
       </div>
     </div>
@@ -160,5 +164,6 @@
       </div>
     </div>
   </footer>
-    </body>
+</body>
+
 </html>
