--- a/features.html
+++ b/features.html
@@ -31,7 +31,7 @@
     <div class="container grid">
       <div>
         <h1 class="xl">Features</h1>
-        <p class="Lead">Sta god treba da se uradi kako god sunce ti jebem.</p>
+        <p class="Lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
       </div>
       <img src="./images/server.png" />
     </div>
@@ -41,7 +41,7 @@
     <div class="container-grid">
       <div>
         <h1 class="md">Loruki Platform</h1>
-        <p class="Lead">Sta god treba da se uradi kako god sunce ti jebem.</p>
+        <p class="Lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
       </div>
       <img src="./images/server2.png" />
     </div>
