--- a/features.html
+++ b/features.html
@@ -38,12 +38,56 @@
   </section>
   <!--Sub Head-->
   <section class="features-sub-head bg-light py-3">
-    <div class="container-grid">
+    <div class="container grid">
       <div>
         <h1 class="md">Loruki Platform</h1>
-        <p class="Lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially</p>
       </div>
       <img src="./images/server2.png" />
+    </div>
+  </section>
+  <!--Features Main-->
+  <section class="features-main my-2">
+    <div class="container grid grid-3">
+      <div class="card flex">
+        <i class="fas fa-server fa-3x"></i>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni aliquid placeat minus unde aperiam,
+          consequatur ipsam facilis officiis fugiat nam fugit accusantium iure tempora asperiores distinctio sapiente
+          cumque veniam exercitationem?</p>
+      </div>
+      <div class="card flex">
+        <i class="fas fa-server fa-3x"></i>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni aliquid placeat minus unde aperiam,
+          consequatur ipsam facilis officiis fugiat nam fugit accusantium iure tempora asperiores distinctio sapiente
+          cumque veniam exercitationem?</p>
+      </div>
+      <div class="card flex">
+        <i class="fas fa-server fa-3x"></i>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni aliquid placeat minus unde aperiam,
+          consequatur ipsam facilis officiis fugiat nam fugit accusantium iure tempora asperiores distinctio sapiente
+          cumque veniam exercitationem?</p>
+      </div>
+      <div class="card flex">
+        <i class="fas fa-server fa-3x"></i>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni aliquid placeat minus unde aperiam,
+          consequatur ipsam facilis officiis fugiat nam fugit accusantium iure tempora asperiores distinctio sapiente
+          cumque veniam exercitationem?</p>
+      </div>
+      <div class="card flex">
+        <i class="fas fa-power-off fa-3x"></i>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni aliquid placeat minus unde aperiam,
+          consequatur ipsam facilis officiis fugiat nam fugit accusantium iure tempora asperiores distinctio sapiente
+          cumque veniam exercitationem?</p>
+      </div>
+      <div class="card flex">
+        <i class="fas fa-database fa-3x"></i>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni aliquid placeat minus unde aperiam,
+          consequatur ipsam facilis officiis fugiat nam fugit accusantium iure tempora asperiores distinctio sapiente
+          cumque veniam exercitationem?</p>
+      </div>
     </div>
   </section>
   <!--Footer-->
